# spelunk

./: .gitignore  .mcp.json  CLAUDE.md  README.md  TASKS.md  database-agent-harness-build-spec.md  pyproject.toml
briefs/: ORCHESTRATION.md
briefs/wave-1/: _SETUP.md  connection.md  dataset.md  guard.md  models.md  report.md  score.md
briefs/wave-2/: introspect.md  mcp.md  query.md  rag.md  tools.md
configs/: models.yaml  rungs.yaml
data/: README.md  questions.jsonl
sample data/: pitchfork-data-metadata.json
scripts/: chat.py  freeze_bird_questions.py  run_eval.py
spelunk/: __init__.py
spelunk/agent/: __init__.py  graph.py  models.py  rungs.py  tools.py
spelunk/core/: __init__.py  connection.py  duck.py  guard.py  introspect.py  query.py  sources.py  types.py
spelunk/eval/: __init__.py  dataset.py  report.py  runner.py  schemas.py  score.py
spelunk/mcp/: __init__.py  server.py
spelunk/rag/: __init__.py  schema_index.py
tests/: conftest.py  test_connection.py  test_dataset.py  test_duck.py  test_graph.py  test_guard.py  test_introspect.py  test_mcp_server.py  test_models.py  test_query.py  test_report.py  test_rungs.py  test_runner.py  test_schema_index.py  test_schemas.py  test_score.py  test_sources.py  test_tools.py
